reference and links, title styel

--- a/asus.html
+++ b/asus.html
@@ -93,19 +93,16 @@
                   <br>
                   <h3>ASUS Music</h3>
                   <p>We built the ASUS Music application, which allowed users to easily access music files on cloud resource, also providing song lyrics and streaming features.</p>
-                  <p><a href="https://goo.gl/pMYnmA">Try it on Google Play Store</a></p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-2-select.png" alt="">
                   <br>
                   <br>
                   <h3>ASUS MicroFilm</h3>
                   <p>To better promote the new ZenFone camera, we were also asked to build the MicroFilm application for creating photo videos. By selecting different themes and customized background music, MicroFilm users could create stylish and immersive slideshow movies.</p>
-                  <p><a href="https://goo.gl/5uy1zr">Try it on Google Play Store</a></p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-microfilm.png" alt="">
                   <br>
                   <br>
                   <h3>ASUS Gallery</h3>
                   <p>We also needed to redesign and update the Gallery application to be consistent with the other new or redesigned ZenFone apps. Our redesigned Gallery provided photo photo viewing and advanced editing to make photo sharing more fun and engaging!</p>
-                  <p><a href="https://goo.gl/5A39XK">Try it on Google Play Store</a></p>
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-gallery.png" alt="">
                   <br>
                   <br>
@@ -113,13 +110,18 @@
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/03-iterations2.png" alt="">
                   <br>
                   <br>
-                  <ul class="list-inline">
-                  <li>Role: Planning | Researching | Wireframing | Prototyping | Testing</li>
-                  <li>Type: ZenFone system applications | Android applications</li>
-                  <li>Projects: MiniMovie | Music | Gallery | Voice Recording | FM Radio | System Settings</li>
-                  <li><a href="https://zenui.asus.com/apps/">More about ASUS ZenUI</a>
-                  <li><a href="https://www.asus.com/Phone/ZenFone-Products/">More about ASUS ZenFone</a>
-                  </ul>
+                  <h3>References</h3>
+                  <p>For more information about ASUS ZenUI & ZenFone Apps, check the following links:</p>
+                  <a href="https://www.asus.com/ZenUI/" target="blank">More about ASUS ZenUI</a>
+                  <br>
+                  <a href="https://www.asus.com/Phone/ZenFone-Products/" target="blank">More about ASUS ZenFone</a>
+                  <br>
+                  <a href="https://goo.gl/5A39XK" target="blank">Asus Gallery on Google Play Store</a>
+                  <br>
+                  <a href="https://goo.gl/5uy1zr" target="blank">Asus MicroFilm on Google Play Store</a>
+                  <br>
+                  <a href="https://goo.gl/pMYnmA" target="blank">Asus Music on Google Play Store</a>
+
                 </div>
               </div>
             </div>
