--- a/kikago.html
+++ b/kikago.html
@@ -86,11 +86,11 @@
                   <p>In the loud environments, such as inside a moving vehicle, a regular phone's microphone is less effective for voice control. Kika developed a noise-cancellation microphone built into a USB-charging cable to solve this problem. With Kika's cutting-edge AI engine, the KikaGo application created a truly hands-free means for communications inside a car environment that is also elegant and simple.</p>
                   <br>
                   <br>
-                  <h3>Challenges - Voice control only</h3>
+                  <h3>Challenges - Voice Control Only</h3>
                   <p>At the time of KikaGo’s development, there were no hands-free, in-car communications on the market. Unlike existing voice-assisted agents like Siri, KikaGo was designed specifically for voice interaction and hands-free communication so that users would be able to interact without seeing or touching the screen. Because of this, the design flow would need to be more abstract and difficult than the conventional user interface, which includes a visual component, and designers would need to spend more time testing the voice interaction, as opposed to the visual interaction design.</p>
                   <br>
                   <br>
-                  <h3>Starting from dialogs</h3>
+                  <h3>Starting From Dialogs</h3>
                   <br>
                   <h5>What are the context in the conversation?</h5>
                   <p>From creating dialogs scripts between users and bot,we could instantly see what we should build in the conversation and what corner issues might show up during the conversation.</p>
@@ -104,7 +104,7 @@
                   <img class="img-fluid d-block mx-400" src="img/portfolio/04-navigation flow.jpg" alt="">
                   <br>
                   <br>
-                  <h3>Designing for drivers</h3>
+                  <h3>Designing For Drivers</h3>
                   <br>
                   <h5>Wireframing for the conversational interaction on the screen</h5>
                   <p>After creating the conversation flow, we map the conversations by wireframes. We could imagine how drivers will perceive and which information should be display on the screen.</p>
@@ -119,20 +119,19 @@
                   <br>
                   <br>
                   <br>
-                  <h3>How KikaGo works in the real world?</h3>
+                  <h3>How KikaGo Works In The Real World?</h3>
                   <br>
                   <div class="embed-responsive embed-responsive-16by9">
                   <iframe src="https://player.vimeo.com/video/249897026" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                   </div>
                   <br>
                   <br>
-                  <ul class="list-inline">
-                  <li>Role: UX designer </li>
-                  <li>Type: Voice User Interface for Automobile</li>
-                  <li>Award: CES 2018 Innovation Award Winner of In-Vehicle Audio/Video, Tech for a Better World, Software and Mobile Apps, and Smart Home</li>
-                  <li><a href="http://kika.ai/">KikaGo Official Home Page </a></li>
-                  <li><a href="http://youtu.be/T7f3z5SF6eE">KikaGo 2018 CES Interview</a></li>
-                  </ul>
+                  
+                  <h3>References</h3>
+                  <p>For more information about KikaGo, check the following links:</p>
+                  <a href="http://kika.ai/" target="_blank">KikaGo Official Home Page</a>
+                  <br>
+                  <a href="http://youtu.be/T7f3z5SF6eE" target="_blank">KikaGo 2018 CES Interview</a>
 
                 </div>
               </div>
