--- a/onetalk_bot.html
+++ b/onetalk_bot.html
@@ -112,17 +112,19 @@
                   -->
                   <img class="img-fluid d-block mx-auto" src="img/portfolio/02_use case.png" alt="">
                   <br>
+                  <h3>How Magic DJ Works?</h3>
+                  <br>
                   <div class="embed-responsive embed-responsive-16by9">
                     <iframe src="https://www.youtube.com/embed/rI0r0cLVJpg" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
                   </div>
                   <br>
                   <br>
-                  <ul class="list-inline">
-                    <li>Role：UX Design | UI Design | </li>
-                    <li>Type：Android and iOS Application</li>
-                    <li>Award：Google Play Most Innovative App of 2017</li>
-                    <li><a href="https://goo.gl/eyRL2Z">Try it on Google Play Store</a></li>
-                  </ul>
+                  <h3>References</h3>
+                  <p>For more information about OneTalk bot, check the following links:</p>
+                  <a href="https://goo.gl/eyRL2Z" target="_blank">Try it on Google Play Store</a>
+                  <br>
+                  <a href="https://itunes.apple.com/us/app/onetalk-music-bot/id1180698446?mt=8" target="_blank">Try it on Apple Store</a>
+                  <br>
                 </div>
               </div>
             </div>
